fix image on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,7 @@ body {
     align-items: flex-start;  /* Align text to the start for better control */
     justify-content: center;
     text-align: left;
-    width: 95%;  /* Adjust this to match the width of your main content if different */
+    width: 93%;  /* Adjust this to match the width of your main content if different */
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;  /* Align these paddings to match other content */
